--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </nav>
 
       <div id="inputSpace" class="container container-body">
+          <button id="get-data" type="button" class="btn btn-primary">Get Data</button>
           <div   class="row justify-content-center no-gutters">
                 <div class="col-6 col-sm-4">
                     NAME
